--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
                             <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa fa-briefcase" aria-hidden="true"></i>"></i></span>Mobile-First, Responsive Design
+                            <span class="fa-li"><i class="fas <i class="fa <i class="fa fa4-briefcase" aria-hidden="true"></i>" aria-hidden="true"></i>"></i></span>Mobile-First, Responsive Design
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa fa-briefcase" aria-hidden="true"></i>"></i></span>Cross Browser Testing & Debugging
+                            <span class="fa-li"><i class="fas <i class="fa fa4-briefcase" aria-hidden="true"></i>"></i></span>Cross Browser Testing & Debugging
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa fa-briefcase" aria-hidden="true"></i>"></i></span>Cross Functional Teams
+                            <span class="fa-li"><i class="fas <i class="fa fa4-briefcase" aria-hidden="true"></i>"></i></span>Cross Functional Teams
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa fa-briefcase" aria-hidden="true"></i>"></i></span>Agile Development & Scrum
+                            <span class="fa-li"><i class="fas <i class="fa fa4-briefcase" aria-hidden="true"></i>"></i></span>Agile Development & Scrum
                         </li>
                     </ul>
                         </div>
