--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
                             <h3 class="mb-0">Azure Consultant</h3>
                             <div class="subheading mb-3">ITST</div>
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
-                            <ul class="fa-ul mb-0">
+                    <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa <i class="fas <i class="fa fa-building" aria-hidden="true"></i>" aria-hidden="true"></i>" aria-hidden="true"></i>"></i></span>Mobile-First, Responsive Design
+                            <span class="fa-li"><i class="fas fa-builing"></i></span>Mobile-First, Responsive Design
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa <i class="fas fa-building" aria-hidden="true"></i>" aria-hidden="true"></i>"></i></span>Cross Browser Testing Debugging
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Cross Browser Testing & Debugging
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa <i class="fas fa-building" aria-hidden="true"></i>" aria-hidden="true"></i>"></i></span>Cross Functional Teams
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Cross Functional Teams
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas <i class="fa <i class="fas fa-building" aria-hidden="true"></i>" aria-hidden="true"></i>"></i></span>Agile DevelopmenScrum
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile Development & Scrum
                         </li>
                     </ul>
                         </div>
