--- a/index.html
+++ b/index.html
@@ -53,16 +53,37 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Azure Consultant</h3>
-                            <div class="subheading mb-3">ITST</div>
+                            <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/brazil.svg" alt="Brazil">
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
+                            <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Execution of Azure migration projects;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Design and implementation of new environments in Azure;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Design and implementation of backup and disaster recovery projects;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Migrating clients from location and other clouds to Azure;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Preparation of documentation and schedules;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Data modeling, query / DAX development and reporting in Power BI.
+                        </li>
+                                 </ul>
                             </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                            <br>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2019 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Facilities Assistant</h3>
+                            <div class="subheading mb-3">Acacia Facilities Management Limited</div>
+                            <p>Responsible for ensuring and operating company facilities: Salesforce (Software on Demand), Food Safety (authority responsible for food safety in Ireland) and Rational Group (online poker platforms). Configured meeting rooms as needed by users, demanded by email, system, and telephone; and was responsible for the logistics of the inputs, ensuring the stock of items for the cleaning, kitchen and office staff. It also acted as management support, reporting, logging, and troubleshooting.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
