--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Azure Consultant</h3>
-                            <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/brazil.svg" alt="Brazil">
+                            <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/brazil.jpg" alt="Brazil">
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
                             <ul class="fa-ul mb-0">
                         <li>
