--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Azure Consultant</h3>
-                            <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/brazil.jpg" alt="Brazil">
+                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspAzure Consultant</h3>
+                        <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div>
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
                             <ul class="fa-ul mb-0">
                         <li>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Facilities Assistant</h3>
+                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspFacilities Assistant</h3>
                             <div class="subheading mb-3">Acacia Facilities Management Limited</div>
                             <p>Responsible for ensuring and operating company facilities: Salesforce (Software on Demand), Food Safety (authority responsible for food safety in Ireland) and Rational Group (online poker platforms). Configured meeting rooms as needed by users, demanded by email, system, and telephone; and was responsible for the logistics of the inputs, ensuring the stock of items for the cleaning, kitchen and office staff. It also acted as management support, reporting, logging, and troubleshooting.</p>
                         </div>
