--- a/index.html
+++ b/index.html
@@ -81,29 +81,93 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspFacilities Assistant</h3>
-                            <div class="subheading mb-3">Acacia Facilities Management Limited</div>
+                            <h3 class="mb-0"><img src="assets/img/ireland.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspFacilities Assistant</h3>
+                            <div class="subheading mb-3">Acacia Facilities Management Limited | Dublin, Ireland</div>
                             <p>Responsible for ensuring and operating company facilities: Salesforce (Software on Demand), Food Safety (authority responsible for food safety in Ireland) and Rational Group (online poker platforms). Configured meeting rooms as needed by users, demanded by email, system, and telephone; and was responsible for the logistics of the inputs, ensuring the stock of items for the cleaning, kitchen and office staff. It also acted as management support, reporting, logging, and troubleshooting.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - February 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspOperation & Process Analyst</h3>
+                            <div class="subheading mb-3">Santander Bank | Sao Paulo, Brazil</div>
+                            <p>Product Owner responsible for Projects and New Technologies involving agencies, agency reforms and temporary service stations, events and ATM implantations:</p>
+                                <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Team management;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Process monitoring and management;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span> Definitions of the business concept;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Renegotiation of deadlines and activities with suppliers;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>SLA settings;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span> Implementation of new solutions;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span> Relationship with internal areas, partners and clients focused on the satisfaction of the final customer.
+                        </li>
+                                 </ul>
+                            <br><p>Main achievements:</br></p>
+                            <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Implement a new agency concept with TecBan (Jundiai’s Agency), with ATM Recycler, where the money is deposited without an envelope and is deposited online in the client's account; and smart check deposit, which is sent for validation immediately (no agency employee required). In addition to other technologies in the agency to increase security, allowing even the removal of the revolving door and making the environment more inviting;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Reduction of 50% in technology costs involving temporary service stations, in large fairs such as Agrishow, Farmshow, Bahia Farm, among others.
+                        </li>
+                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2015 - July 2018</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                        <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspBusiness Analyst</h3>
+                        <div class="subheading mb-3">OKI Brazil | Sao Paulo, Brazil</div>
+                        <p>OKI is bank automation, commercial automation, and Japanese IT services company, which was merged with the Brazilian company Itautec.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2013 - June 2015</span></div>
+                    </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                        <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspNetwork Planning Analyst</h3>
+                        <div class="subheading mb-3">OKI Brazil | Sao Paulo, Brazil</div>
+                        <p>Telecommunication solutions planner and telephone concessionaire coordinator. Responsible for the definition of flows, operationalization, and execution of services:</p>
+                                                        <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Management of Embratel, Telefônica, Oi, Hughes and Telespazio concessionaires;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Implementation of ToIP PABX, MPLS Network and local infrastructure;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Definition of the types of technology used in banking service stations;
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span> Strong interaction with the commercial area, customer service, construction engineering, and banking security.
+                        </li>
+                            </ul>
+                            <br><p>Main achievements:</br></p>
+                            <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Implement a new telecommunication model for high-standard agencies (Santander Select Bank);
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Development of projects in large clients, such as CSN, Petrobras, FIAT and other companies.
+                        </li>
+                                 </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2013 - June 2015</span></div>
                     </div>
                 </div>
+
             </section>
             <hr class="m-0" />
             <!-- Education / Languages-->
