--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
                         <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                        <h3 class="mb-0"><img src="assets/img/itautec.jpg"" height="25px" width="25px" border="1px">&nbsp&nbsp&nbspNetwork Planning Analyst</h3>
+                        <h3 class="mb-0"><img src="assets/img/itautec.jpg"" height="55px" width="80px" border="1px">&nbsp&nbsp&nbspNetwork Planning Analyst</br></h3>
                         <div class="subheading mb-3">ITAUTEC | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg"" height="25px" width="25px" border="1px"></div>
                         <p>Telecommunication solutions planner and telephone concessionaire coordinator. Responsible for the definition of flows, operationalization, and execution of services:</p>
                                                         <ul class="fa-ul mb-0">
