--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                         <div class="subheading mb-3">OKI Brazil | Sao Paulo, Brazil</div>
                         <p>OKI is bank automation, commercial automation, and Japanese IT services company, which was merged with the Brazilian company Itautec.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">October 2013 - June 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2013 - June 2015</span></br></div>
                     </div>
                         <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                         <br><h3 class="mb-0"><img src="assets/img/itautec.jpg"" height="50px" width="80px" border="1px">Network Planning Analyst</br></h3>
-                        <div class="subheading mb-3">ITAUTEC | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg"" height="25px" width="25px" border="1px"></div>
+                        <br><div class="subheading mb-3">ITAUTEC | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg"" height="20px" width="25px" border="1px"></div>
                         <p>Telecommunication solutions planner and telephone concessionaire coordinator. Responsible for the definition of flows, operationalization, and execution of services:</p>
                                                         <ul class="fa-ul mb-0">
                         <li>
