--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspOperation & Process Analyst</h3>
-                            <div class="subheading mb-3">Santander Bank | Sao Paulo, Brazil</div>
+                            <h3 class="mb-0"><img src="assets/img/OKI.jpg" class="center" height="60px" width="90px" border="1px">&nbsp&nbsp&nbspOperation & Process Analyst</h3>
+                            <div class="subheading mb-3">Santander Bank | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg" class="center" height="25px" width="25px" border="1px"></div>
                             <p>Product Owner responsible for Projects and New Technologies involving agencies, agency reforms and temporary service stations, events and ATM implantations:</p>
                                 <ul class="fa-ul mb-0">
                         <li>
@@ -129,8 +129,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                        <h3 class="mb-0"><img src="assets/img/itautec.jpg" class="center" height="50px" width="80px" border="1px">&nbsp&nbsp&nbspBusiness Analyst</h3>
-                        <div class="subheading mb-3">OKI Brazil | Sao Paulo, Brazil</div>
+                        <h3 class="mb-0"><img src="assets/img/OKI.jpg" class="center" height="60px" width="90px" border="1px">&nbsp&nbsp&nbspBusiness Analyst</h3>
+                        <div class="subheading mb-3">OKI Brazil | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg" class="center" height="25px" width="25px" border="1px"></div>
                         <p>OKI is bank automation, commercial automation, and Japanese IT services company, which was merged with the Brazilian company Itautec.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2013 - June 2015</span></br></div>
