--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><img src="assets/img/OKI.jpg" class="center" height="60px" width="90px" border="1px">&nbsp&nbsp&nbspOperation & Process Analyst</h3>
+                            <h3 class="mb-0"><img src="assets/img/Santander.jpg" class="center" height="60px" width="65Spx" border="1px">&nbsp&nbsp&nbspOperation & Process Analyst</h3>
                             <div class="subheading mb-3">Santander Bank | Sao Paulo, Brazil&nbsp&nbsp&nbsp<img src="assets/img/brazil.jpg" class="center" height="25px" width="25px" border="1px"></div>
                             <p>Product Owner responsible for Projects and New Technologies involving agencies, agency reforms and temporary service stations, events and ATM implantations:</p>
                                 <ul class="fa-ul mb-0">
