--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="resume-section" id="profile">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Paulo <span class="text-primary">Nunes</span></h1>
-                    <div class="subheading mb-5">186 Avenue Duque de Caxias, SP, Brazil· +55 11 93152+6689· <a href="mailto:paulo.nunes@@live.de">paulo.nunes@live.de</a></div>
+                    <div class="subheading mb-5">186 Avenue Duque de Caxias, SP, Brazil· +55 11 93152+6689. <a href="mailto:paulo.nunes@@live.de">paulo.nunes@live.de</a></div>
                         <p class="lead mb-5">9 years of experience in Cloud, SAP, Operations, Communication, Attendance, Project, Quality, Technology and Telecommunication areas, with solid performance in corporate integration. Focus on interpersonal relationships, building strategic alliances with other areas and managing high performance teams including: engineers, system developers, telecommunication network administrators, technology solutions architects, bankers, marketers, and builders..</p>
                         <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="#"><i class="fab fa-github"></i></a><a class="social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -52,7 +52,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><img src="assets/img/brazil.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspAzure Consultant</h3>
+                            <h3 class="mb-0"><img src="assets/img/ITST.jpg"" height="60px" width="60px" border="1px">&nbsp&nbsp&nbspAzure Consultant</h3>
                         <div class="subheading mb-3">ITST | Sao Paulo, Brazil</div>
                             <p>Responsible for implementing solutions in large companies, designing, planning, executing and managing Azure-based solutions.</p>
                             <ul class="fa-ul mb-0">
