--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#outros">Outros</a></li>
                 </ul>
 
-                <div class="bg-image mb-5">
-            </div>
+               
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
@@ -40,7 +39,7 @@
             <section class="resume-section" id="perfil">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Helena <span class="text-primary">Napoleone</span></h1>
-                    <div class="subheading mb-5">186 Av Duque de Caxias, SP, Brazil· +55 11 95731-2302. <a href="mailto:helenanapoleone@gmail.com">helenanapoleone@gmail.com</a></div>
+                    <div class="subheading mb-5">186 Av Duque de Caxias, SP, Brazil· +55 11 95731-2302. <a href="mailto:helenanapoleone@gmail.com"><br>helenanapoleone@gmail.com</a></div>
                         <p class="lead mb-5">Formada em Moda pela Faculdade Metropolitanas Unidas (FMU) com ênfase em gestão, atuo no mercado de moda e varejo há mais de 7 anos. Possuo conhecimentos em gestão de marcas, estilo, fichas técnicas, pesquisas de tendências, mídias sociais e marketing digital (influenciadores digitais). No momento estudando front-end na Arbyte, com ênfase em HTML, CSS e Javascript.
                     
                             </p>
