--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
+            <!-- Interest
             <section class="resume-section" id="interesses">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interesses</h2>
@@ -236,7 +236,7 @@
             
                 </div>
             </section>
-        </div>
+        </div>-->
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
