--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#educacao">Educação</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#idiomas">Idiomas</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#habilidade">Habilidades</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interesses">Interesses</a></li>
+                    <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interesses">Interesses</a></li>-->
                 
                 </ul>
 
