--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">Helena <span class="text-primary">Napoleone</span></h1>
                     <div class="subheading mb-5">Av Duque de Caxias, SP, Brasil· +55 11 95731-2302. <a href="mailto:helenanapoleone@gmail.com"><br>helenanapoleone@gmail.com</a></div>
-                        <p class="lead mb-5">Formada em Moda pela Faculdade Metropolitanas Unidas (FMU) com ênfase em gestão, atuo no mercado de moda e varejo há mais de 7 anos. Possuo conhecimentos em gestão de marcas, estilo, fichas técnicas, pesquisas de tendências, mídias sociais e marketing digital (influenciadores digitais). No momento estudando front-end na Arbyte, com ênfase em HTML, CSS e Javascript.
+                        <p class="lead mb-5">Formada em Moda pela Faculdade Metropolitanas Unidas (FMU) com ênfase em gestão, atuo no mercado de moda e varejo há mais de 7 anos. Possuo conhecimentos em gestão de marcas, estilo, fichas técnicas, pesquisas de tendências, mídias sociais e marketing digital (influenciadores digitais). No momento estudando front-end, com ênfase em HTML, CSS e Javascript.
                     
                             </p>
                         <div class="social-icons">
